[package]
name = "gitstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blobgraph = { path = "../blobgraph" }
gix-object = { version = "0.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"

[dev-dependencies]
gix-date = { version = "0.8", features = ["serde"] }

